--- a/backend/package.json
+++ b/backend/package.json
@@ -1,29 +1,24 @@
 {
-  "name": "backend",
+  "name": "token-sniper-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@coral-xyz/anchor": "^0.31.1",
-    "@solana/buffer-layout-utils": "^0.2.0",
-    "@solana/spl-token": "^0.4.13",
-    "@solana/web3.js": "^1.98.2",
-    "bn.js": "^5.2.2",
-    "bs58": "^6.0.0",
-    "buffer": "^6.0.3",
-    "dotenv": "^16.5.0",
-    "js-sha256": "^0.11.1"
+    "@solana/spl-token": "^0.3.9",
+    "@solana/web3.js": "^1.87.6",
+    "dotenv": "^16.3.1",
+    "js-sha256": "^0.11.1",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
-    "@types/bn.js": "^5.1.6",
-    "@types/node": "^22.15.21",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "@types/node": "^20.10.0",
+    "@types/ws": "^8.18.1",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   }
 }
