--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@solana/spl-token": "^0.3.9",
     "@solana/web3.js": "^1.87.6",
+    "bs58": "^6.0.0",
     "dotenv": "^16.3.1",
     "js-sha256": "^0.11.1",
     "ws": "^8.14.2"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/ws": "^8.18.1",
+    "concurrently": "^9.1.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
