--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,13 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@metaplex-foundation/js": "^0.20.1",
     "@solana/spl-token": "^0.3.9",
     "@solana/web3.js": "^1.87.6",
     "bs58": "^6.0.0",
     "dotenv": "^16.3.1",
     "js-sha256": "^0.11.1",
+    "mongoose": "^8.15.1",
     "ws": "^8.14.2"
   },
   "devDependencies": {
