--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@metaplex-foundation/js": "^0.20.1",
+    "@project-serum/anchor": "^0.26.0",
     "@solana/spl-token": "^0.3.9",
     "@solana/web3.js": "^1.87.6",
     "bs58": "^6.0.0",
