--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,25 @@
     "@project-serum/anchor": "^0.26.0",
     "@solana/spl-token": "^0.3.9",
     "@solana/web3.js": "^1.87.6",
+    "bcryptjs": "^3.0.2",
     "bs58": "^6.0.0",
-    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "js-sha256": "^0.11.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "nodemailer": "^7.0.3",
+    "resend": "^4.6.0",
     "ws": "^8.14.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.10.0",
+    "@types/nodemailer": "^6.4.17",
     "@types/ws": "^8.18.1",
     "concurrently": "^9.1.2",
     "nodemon": "^3.0.1",
