--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,10 @@
 MEMEHOME_PROGRAM_ID=HX9REZoZccLoearGnUobFKMTUNmKmmCqWouY3hg4Qnk5
 RPC_ENDPOINT=https://devnet.helius-rpc.com/?api-key=d70232c8-cb8c-4fb0-9d3f-985fc6f90880
 RPC_WEBSOCKET_ENDPOINT=wss://devnet.helius-rpc.com/?api-key=d70232c8-cb8c-4fb0-9d3f-985fc6f90880
-BUYER_PUBLIC_KEY=3HG7He3ccEojJFXqt8B2EF2Ct7SKEbVsSewmYhhnNiaz
-USER_SECRET_KEY=[21,219,103,193,255,180,165,62,160,226,68,99,202,13,242,234,79,239,51,54,152,90,67,156,58,44,236,114,170,209,90,160,33,225,191,250,91,111,247,124,195,68,82,151,19,83,161,153,103,210,232,137,151,135,85,248,27,231,64,226,228,60,184,15]
-MONGODB_URI=mongodb+srv://kamranbaig2905:LKASxIIjGq8wrXXX@cluster0.cwndoj3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
+#BUYER_PUBLIC_KEY=3HG7He3ccEojJFXqt8B2EF2Ct7SKEbVsSewmYhhnNiaz
+#USER_SECRET_KEY=[21,219,103,193,255,180,165,62,160,226,68,99,202,13,242,234,79,239,51,54,152,90,67,156,58,44,236,114,170,209,90,160,33,225,191,250,91,111,247,124,195,68,82,151,19,83,161,153,103,210,232,137,151,135,85,248,27,231,64,226,228,60,184,15]
+# MONGODB_URI=mongodb+srv://kamranbaig2905:LKASxIIjGq8wrXXX@cluster0.cwndoj3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb://localhost:27017/tokenbot
 RESEND_API_KEY=re_6JNomdri_MPmhxzLVzdjtDUMwDhsZP5oS
 
 # JWT Secret for creating tokens
