--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "date-fns": "^4.1.0",
+    "jwt-decode": "^4.0.0",
     "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
