--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@project-serum/anchor": "^0.26.0",
     "@rollup/plugin-inject": "^5.0.5",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
