--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
