--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@jup-ag/api": "^6.0.44",
     "@metaplex-foundation/js": "^0.20.1",
     "@project-serum/anchor": "^0.26.0",
     "@solana/spl-token": "^0.3.9",
