latest commit with fixes

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
-MEMEHOME_PROGRAM_ID=5BQSitWJMCXjTXoTQLmhjHtbtWJWdk8GS2wHap3AFDKV
+#MEMEHOME_PROGRAM_ID=5BQSitWJMCXjTXoTQLmhjHtbtWJWdk8GS2wHap3AFDKV
+MEMEHOME_PROGRAM_ID=3ce9HZtgCPrdF5TF6f9aixZzisR55NFET2mZ2VDrrdgB
 RPC_ENDPOINT=https://devnet.helius-rpc.com/?api-key=d70232c8-cb8c-4fb0-9d3f-985fc6f90880
 RPC_WEBSOCKET_ENDPOINT=wss://devnet.helius-rpc.com/?api-key=d70232c8-cb8c-4fb0-9d3f-985fc6f90880
 #BUYER_PUBLIC_KEY=3HG7He3ccEojJFXqt8B2EF2Ct7SKEbVsSewmYhhnNiaz
