make UI enhancement add navbar new, deposit modal withraw mdal

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.3",
     "@metaplex-foundation/js": "^0.20.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
     "@mui/icons-material": "^7.1.0",
@@ -20,6 +23,7 @@
     "@rollup/plugin-inject": "^5.0.5",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
+    "@types/qrcode": "^1.5.5",
     "@types/ws": "^8.18.1",
     "assert": "^2.1.0",
     "axios": "^1.9.0",
@@ -29,6 +33,7 @@
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "process": "^0.11.10",
+    "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
