--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "extract-translations": "i18next-scanner --config i18next-scanner.config.js"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -32,11 +33,14 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "date-fns": "^4.1.0",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jwt-decode": "^4.0.0",
     "process": "^0.11.10",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
     "stream-browserify": "^3.0.0"
   },
@@ -52,6 +56,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "i18next-parser": "^9.3.0",
+    "i18next-scanner": "^4.6.0",
     "postcss": "^8.5.4",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "tailwindcss": "^4.1.8",
